# SolarSystem

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  settings.ini
data/constellations/: SOURCE.md  lines.csv  names.csv  stars.csv
docs/superpowers/plans/: 2026-07-16-fullscreen-toggle.md  2026-07-17-camera-relative-rendering.md  2026-07-18-graphics-settings-panel.md  2026-07-22-main-cpp-modularization.md  2026-07-23-constellations.md
docs/superpowers/specs/: 2026-07-16-fullscreen-toggle-design.md  2026-07-17-camera-relative-rendering-design.md  2026-07-18-graphics-settings-panel-design.md  2026-07-18-msaa-offscreen-design.md  2026-07-22-main-cpp-modularization-design.md  2026-07-23-constellations-design.md
scripts/: bake_cube.py  fetch_textures.ps1  make_bc7.sh  run_dev.bat  verify_starmap_convention.py
shaders/: asteroid_cull.comp  bloom_down.frag  bloom_up.frag  blur.frag  particle.comp  particle.frag  particle.vert  post.frag  post.vert  shader.frag  shader.vert  shadow_vert.vert
src/: Camera.hpp  VulkanBase.hpp  main.cpp  third_party_impl.cpp
src/app/: App_Frame.cpp  App_Init.cpp  App_Input.cpp  App_Record.cpp  App_Resources.cpp  App_Textures.cpp  App_Ui.cpp  SolarSystemApp.hpp  Types.hpp
src/core/: GpuProfiler.cpp  GpuProfiler.hpp  Settings.cpp  Settings.hpp
src/gfx/: MeshGen.cpp  MeshGen.hpp
src/sim/: AsteroidBelt.cpp  AsteroidBelt.hpp  CelestialData.cpp  CelestialData.hpp  StarCatalog.cpp  StarCatalog.hpp
textures/: milkyway.dds
textures/asteroids/: Gaspra.dds  Ida.dds
textures/moons/: io_glow.dds  titan_atmosphere.dds
textures/planets/: uranus.dds  venus_atmosphere.dds
